--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -8,7 +8,7 @@
     android:layout_marginEnd="10dp">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ivProfileImage"
         android:layout_width="85dp"
         android:layout_height="74dp"
         android:layout_alignParentStart="true"
@@ -22,7 +22,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
-        android:layout_toEndOf="@+id/imageView"
+        android:layout_toEndOf="@+id/ivProfileImage"
         android:fontFamily="@font/nunito_sans_semibold"
         android:textSize="16sp"
         tools:text="manuelrurda" />
@@ -34,7 +34,7 @@
         android:layout_below="@+id/tvScreenName"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:layout_toEndOf="@+id/imageView"
+        android:layout_toEndOf="@+id/ivProfileImage"
         tools:text="This is a long and interesting tweet. Share it in MyTwitterApp" />
 
 </RelativeLayout>
