--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -6,8 +6,8 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp">
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp">
 
     <ImageView
         android:id="@+id/ivProfileImage"
@@ -39,6 +39,7 @@
         android:layout_below="@+id/tvScreenName"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
+        android:layout_marginBottom="10dp"
         android:layout_toEndOf="@+id/ivProfileImage"
         tools:text="This is a long and interesting tweet. Share it in MyTwitterApp" />
 
