--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -11,13 +11,11 @@
 
     <ImageView
         android:id="@+id/ivProfileImage"
-        android:layout_width="85dp"
-        android:layout_height="74dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="3dp"
+        android:layout_marginTop="12dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
