--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -15,30 +15,74 @@
         android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="15dp"
+        android:contentDescription="@string/profile_picture"
         tools:srcCompat="@tools:sample/avatars" />
 
-    <TextView
-        android:id="@+id/tvScreenName"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/llTweetDetails"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/ivProfileImage"
-        android:fontFamily="@font/nunito_sans_semibold"
-        android:textSize="16sp"
-        tools:text="manuelrurda" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvBody"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvScreenName"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="10dp"
-        android:layout_toEndOf="@+id/ivProfileImage"
-        tools:text="This is a long and interesting tweet. Share it in MyTwitterApp" />
+        <LinearLayout
+            android:id="@+id/llUserName"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/nunito_sans_semibold"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                tools:text="Manuel Rodriguez" />
+
+            <TextView
+                android:id="@+id/tvScreenName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/nunito_sans"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="#86000000"
+                android:textSize="16sp"
+                tools:text="manuelrurda" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvBody"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="5dp"
+            android:fontFamily="@font/nunito_sans"
+            android:textColor="#000000"
+            tools:text="This is a long and interesting tweet. Share it in MyTwitterApp" />
+
+        <ImageView
+            android:id="@+id/ivTweetMedia"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="7dp"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/tweet_media"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            android:scaleType="fitXY"
+            tools:srcCompat="@tools:sample/avatars" />
+
+    </LinearLayout>
 
 </RelativeLayout>
