--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -14,7 +14,9 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:text="@string/tweet" />
+        android:background="@color/twitter_blue"
+        android:text="@string/tweet"
+        android:textColor="@color/white" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tiTweetLayout"
