--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -42,7 +42,7 @@
                 android:fontFamily="@font/nunito_sans_semibold"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:textColor="#000000"
+                android:textColor="@android:color/black"
                 android:textSize="16sp"
                 tools:text="Manuel Rodriguez" />
 
@@ -50,11 +50,11 @@
                 android:id="@+id/tvScreenName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="10dp"
                 android:fontFamily="@font/nunito_sans"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:textColor="#86000000"
+                android:textColor="@color/medium_gray"
                 android:textSize="16sp"
                 tools:text="manuelrurda" />
 
@@ -66,7 +66,7 @@
                 android:fontFamily="@font/nunito_sans"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:textColor="#86000000"
+                android:textColor="@color/medium_gray"
                 tools:text=" · 3m" />
 
         </LinearLayout>
@@ -80,7 +80,7 @@
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="5dp"
             android:fontFamily="@font/nunito_sans"
-            android:textColor="#000000"
+            android:textColor="@android:color/black"
             tools:text="This is a long and interesting tweet. Share it in MyTwitterApp" />
 
         <ImageView
