--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/twitter_blue">
+    android:background="@color/white"
+    android:elevation="20dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -22,18 +23,18 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/ic_logout_icon"
-            app:tint="@color/white" />
+            app:tint="@color/twitter_blue" />
 
         <ImageView
             android:id="@+id/imTwitterLogo"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="37dp"
+            android:layout_height="37dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/btnLogOut"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_icon_twitter"
-            app:tint="@color/white" />
+            app:tint="@color/twitter_blue" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
