--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -12,8 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tiTweetLayout"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="47dp"
+        android:layout_marginEnd="24dp"
         android:background="@color/twitter_blue"
         android:text="@string/tweet"
         android:textColor="@color/white" />
@@ -26,6 +26,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="57dp"
         android:layout_marginEnd="10dp"
         app:counterEnabled="true"
         app:counterMaxLength="140">
@@ -33,7 +34,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etCompose"
             android:layout_width="match_parent"
-            android:layout_height="105dp" />
+            android:layout_height="105dp"
+            android:hint="@string/what_s_happening" />
     </com.google.android.material.textfield.TextInputLayout>
 
 </RelativeLayout>
